@@ -44,5 +44,11 @@ Strategies!!!
         added aftermove function that sets moved to true (can also handle other aftermoves later like castling or promotion)
         Added checks for pawn moves in simulateMove that prevent moving diagonally if there is no piece to capture
 
+12-01
+    Move: 
+        added startPos field
+    Pawn:
+        added enPassant field, setEnPassant(), getEnPassant()
+
 
 
